--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "aws-cdk-lib": "2.128.0",
     "cdk-nag": "^2.28.50",
     "constructs": "^10.0.0",
+    "esbuild": "^0.20.1",
     "fs-extra": "^11.2.0",
     "source-map-support": "^0.5.21"
   }
