--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.5",
     "@types/node": "20.7.1",
-    "aws-cdk": "2.128.0",
+    "aws-cdk": "2.132.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
@@ -20,9 +20,20 @@
   },
   "dependencies": {
     "@aws-appsync/utils": "^1.7.0",
+    "@aws-sdk/client-bedrock-runtime": "^3.529.1",
     "@cloudscape-design/components": "^3.0.558",
     "@cloudscape-design/global-styles": "^1.0.23",
-    "aws-cdk-lib": "2.128.0",
+    "@project-lakechain/bedrock-embedding-processors": "^0.4.0",
+    "@project-lakechain/bedrock-text-processors": "^0.4.0",
+    "@project-lakechain/core": "^0.4.0",
+    "@project-lakechain/opensearch-domain": "^0.4.0",
+    "@project-lakechain/opensearch-vector-storage-connector": "^0.4.0",
+    "@project-lakechain/pandoc-text-converter": "^0.4.0",
+    "@project-lakechain/pdf-text-converter": "^0.4.0",
+    "@project-lakechain/recursive-character-text-splitter": "^0.4.0",
+    "@project-lakechain/s3-event-trigger": "^0.4.0",
+    "@project-lakechain/transcribe-audio-processor": "^0.4.0",
+    "aws-cdk-lib": "2.132.1",
     "cdk-nag": "^2.28.50",
     "constructs": "^10.0.0",
     "esbuild": "^0.20.1",
