--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.136",
     "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.5",
     "@types/node": "20.7.1",
     "aws-cdk": "2.132.1",
+    "aws-lambda": "^1.0.7",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
