--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
     "strictPropertyInitialization": false,
     "typeRoots": ["./node_modules/@types"]
   },
-  "exclude": ["node_modules", "cdk.out", "dist/"]
+  "exclude": ["node_modules", "cdk.out", "dist/", "ui/"]
 }
