chore: remove LakeChain

--- a/package.json
+++ b/package.json
@@ -23,22 +23,18 @@
   },
   "dependencies": {
     "@aws-appsync/utils": "^1.7.0",
+    "@aws-lambda-powertools/batch": "^2.0.3",
+    "@aws-lambda-powertools/commons": "^2.0.3",
+    "@aws-lambda-powertools/logger": "^2.0.3",
+    "@aws-lambda-powertools/metrics": "^2.0.3",
+    "@aws-lambda-powertools/tracer": "^2.0.3",
     "@aws-sdk/client-bedrock-agent": "^3.533.0",
     "@aws-sdk/client-bedrock-runtime": "^3.529.1",
     "@aws-sdk/client-opensearchserverless": "^3.533.0",
+    "@aws-sdk/client-s3": "^3.535.0",
     "@cloudscape-design/components": "^3.0.558",
     "@cloudscape-design/global-styles": "^1.0.23",
     "@opensearch-project/opensearch": "^2.6.0",
-    "@project-lakechain/bedrock-embedding-processors": "^0.4.0",
-    "@project-lakechain/bedrock-text-processors": "^0.4.0",
-    "@project-lakechain/core": "^0.4.0",
-    "@project-lakechain/opensearch-domain": "^0.4.0",
-    "@project-lakechain/opensearch-vector-storage-connector": "^0.4.0",
-    "@project-lakechain/pandoc-text-converter": "^0.4.0",
-    "@project-lakechain/pdf-text-converter": "^0.4.0",
-    "@project-lakechain/recursive-character-text-splitter": "^0.4.0",
-    "@project-lakechain/s3-event-trigger": "^0.4.0",
-    "@project-lakechain/transcribe-audio-processor": "^0.4.0",
     "aws-cdk-lib": "2.132.1",
     "aws4": "^1.12.0",
     "cdk-nag": "^2.28.50",
