--- a/lib/.graphqlconfig.yml
+++ b/lib/.graphqlconfig.yml
@@ -1,16 +1,15 @@
 projects:
   Codegen Project:
-    schemaPath: lib/schema.graphql
+    schemaPath: schema.graphql
     includes:
-      - ui/src/graphql/**/*.ts
+      - ../ui/src/graphql/**/*.ts
     excludes:
       - ./amplify/**
-      - ui/src/graphql/API.ts
     extensions:
       amplify:
         codeGenTarget: typescript
-        generatedFileName: ui/src/graphql/API.ts
-        docsFilePath: ui/src/graphql
+        generatedFileName: ../ui/src/graphql/API.ts
+        docsFilePath: ../ui/src/graphql
         region: us-east-1
         apiId: null
         frontend: javascript
