--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "jest",
     "cdk": "cdk",
-    "postcdk": "npx @aws-amplify/cli codegen"
+    "postcdk": "cd lib && npx @aws-amplify/cli codegen"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.136",
