--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cdk-nag": "^2.28.50",
     "constructs": "^10.0.0",
     "esbuild": "^0.20.1",
+    "fast-xml-parser": "^4.3.6",
     "fs-extra": "^11.2.0",
     "source-map-support": "^0.5.21"
   }
