--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.5",
     "@types/node": "20.7.1",
+    "@types/uuid": "^9.0.8",
     "aws-cdk": "2.132.1",
     "aws-lambda": "^1.0.7",
     "jest": "^29.7.0",
@@ -31,10 +32,12 @@
     "@aws-lambda-powertools/metrics": "^2.0.3",
     "@aws-lambda-powertools/tracer": "^2.0.3",
     "@aws-sdk/client-bedrock-agent": "^3.533.0",
+    "@aws-sdk/client-bedrock-agent-runtime": "^3.540.0",
     "@aws-sdk/client-bedrock-runtime": "^3.529.1",
     "@aws-sdk/client-dynamodb": "^3.540.0",
     "@aws-sdk/client-opensearchserverless": "^3.533.0",
     "@aws-sdk/client-s3": "^3.535.0",
+    "@aws-sdk/lib-dynamodb": "^3.540.0",
     "@cloudscape-design/components": "^3.0.558",
     "@cloudscape-design/global-styles": "^1.0.23",
     "@opensearch-project/opensearch": "^2.6.0",
@@ -45,6 +48,7 @@
     "esbuild": "^0.20.1",
     "fast-xml-parser": "^4.3.6",
     "fs-extra": "^11.2.0",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "uuid": "^9.0.1"
   }
 }
