add ability to select role at signup

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@aws-sdk/client-bedrock-agent": "^3.533.0",
     "@aws-sdk/client-bedrock-agent-runtime": "^3.540.0",
     "@aws-sdk/client-bedrock-runtime": "^3.529.1",
+    "@aws-sdk/client-cognito-identity-provider": "^3.556.0",
     "@aws-sdk/client-dynamodb": "^3.540.0",
     "@aws-sdk/client-lambda": "^3.540.0",
     "@aws-sdk/client-opensearchserverless": "^3.533.0",
