--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@aws-sdk/client-s3": "^3.535.0",
     "@aws-sdk/client-ssm": "^3.556.0",
     "@aws-sdk/lib-dynamodb": "^3.540.0",
+    "@cdklabs/cdk-validator-cfnguard": "^0.0.58",
     "@cloudscape-design/components": "^3.0.558",
     "@cloudscape-design/global-styles": "^1.0.23",
     "@opensearch-project/opensearch": "^2.6.0",
